[tool.poetry]
name = "communityadmin"
version = "2.3.3"
description = ""
authors = ["zhao-leo <18055219130@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nicegui = "^2.0.1"
requests = "^2.32.3"
pyecharts = "^2.0.6"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
